--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "appwrite": "^17.0.1",
@@ -33,6 +34,7 @@
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "nativewind": "^4.1.23",
+    "node-appwrite": "^15.0.1",
     "openai": "^4.86.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -51,12 +53,16 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
+    "@types/node": "^22.14.1",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.5.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.3",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   },
   "private": true
 }
